--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -22,11 +22,10 @@ spec:
         ports:
         - containerPort: 80
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: app1
 spec:
   selector: # labels are used as the selectors
     app: app1
@@ -35,3 +34,26 @@ spec:
     port: 80 # The port that the service will expose
     targetPort: 80
 ---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: minimal-ingress
+  annotations:
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+    alb.ingress.kubernetes.io/certificate-arn: arn:aws:arn:aws:acm:us-east-1:897729141306:certificate/b1707e1b-9725-41f1-8265-59786ab76250
+    alb.ingress.kubernetes.io/group: lokeshportfo
+spec:
+  ingressClassName: alb
+  rules:
+  - host: "app1.lokeshportfo.site"
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: app1
+            port:
+              number: 80
