--- a/app1/manifest.yaml
+++ b/app1/manifest.yaml
@@ -41,7 +41,7 @@ metadata:
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 443}]'
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:897729141306:certificate/135abcaf-dbd7-4da2-be49-3e1ff5fc4188
     alb.ingress.kubernetes.io/group: peddireddylokesh
 spec:
